# AFP_ants

./: .gitignore  AFP_ants.cabal  Algorithm.hs  CodeGenerator.hs  DescriptionCode.hs  Functions.hs  Funtions.hs  Main.hs  Program structure.txt  README.txt  State.hs  Strategies.hs  TODO.txt  pathFollowing2.ant  pathFollowing2.txt  pathFollowing3.ant  stable2.ant  test.ant  test2.ant  testAnt.ant  testCode.txt  testCode2.txt
Ants/: 2013-B-3692701-3253473-3682536-3718778.instable.ant  2013-C-4110161-4022831-4003373.mv_ph_lb.ant  2013-D-3677133-3672565.BeimersBrinke.ant  2013-E-3470679-4034627.antStrategyts.ant
simulator/: ant2.ant
