name:                AFPants
version:             0.1.0.0
synopsis:            Advanced Functional Programming ants programming task
description:         Contains a library to generate ant code, our ant algorithm and the ant algorithm from the assignment.
-- license:             
-- license-file:        LICENSE
author:              Koen Wermer & Sebastiaan Jong $ Ivo Klein Hofmeijer 
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     CodeGenerator, Algorithm, DescriptionCode
  ghc-options:         -fcontext-stack40
  --other-modules:       
  build-depends:       base>=4.6.0.0, mtl>=2.2.1
